fixed community typo and changed link

--- a/frontend/javascripts/app/views/home.html
+++ b/frontend/javascripts/app/views/home.html
@@ -39,7 +39,7 @@
           <img src="/images/chai-logo-black.svg">
         </div>
         <div>
-          Join the communty at <a target="_blank" href="http://chaibio.com/">www.chaibio.com</a>
+          Join the community at <a target="_blank" href="https://community.chaibio.com/">community.chaibio.com</a>
         </div>
       </div>
     </div>
