--- a/frontend/javascripts/dynexp/pika_test/views/results.html
+++ b/frontend/javascripts/dynexp/pika_test/views/results.html
@@ -2,11 +2,11 @@
 	<div ng-show="experiment.completion_status === 'success' && !analyzing && famCq" class="col-lg-10 col-md-10 col-sm-10 col-xs-10 left-padding">
 		<h6>Experiment: <span class="edit" ng-click="focusExpName()" ng-show="!editExpName">Edit</span> </h6>
 		<h2 class="exp-heading">
-			<span ng-show="!editExpName">A.{{experiment.name}}</span>
+			<span ng-show="!editExpName">{{experiment.name}}</span>
 			<input type="text" placeholder="Enter Experiment Name Here" ng-show="editExpName" class="exp-name H1" required ng-model="experiment.name"  ng-blur="updateExperimentName()"
 			my-enter="updateExperimentName()" focus-on="editExpName">
 		</h2>
-		<h3>{{target}}</h3>
+		<!--<h3>{{target}}</h3> -->
 	</div>
 	<div ng-show="experiment.completion_status === 'success' && !analyzing && famCq && !twoKits" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 left-padding">
 		<table ng-show="!twoKits">
