show chart, todo: fix set active path

--- a/ng2/src/app/components/dashboard/charts/amplification/amplification.component.html
+++ b/ng2/src/app/components/dashboard/charts/amplification/amplification.component.html
@@ -1,1 +1,10 @@
-<h1>Amplification Chart here</h1>
+<div class="container">
+
+  <h1>Amplification Chart</h1>
+
+  <div style="width: 500px; height: 200px;">
+    <div chai-amplification-chart [data]="ampliData" [config]="config"></div>
+  </div>
+
+</div>
+
