working on well buttons

--- a/ng2/src/app/components/dashboard/charts/amplification/amplification.component.html
+++ b/ng2/src/app/components/dashboard/charts/amplification/amplification.component.html
@@ -6,5 +6,7 @@
     <div chai-amplification-chart [data]="ampliData" [config]="config"></div>
   </div>
 
+  <div chai-well-buttons [wells]="wellButtons" (onSelectWells)="onWellsSelected($event)" [colorby]="colorBy"></div>
+
 </div>
 
