fix well colors

--- a/ng2/src/app/shared/components/well-buttons/well-buttons.component.html
+++ b/ng2/src/app/shared/components/well-buttons/well-buttons.component.html
@@ -1,18 +1,18 @@
 <div class="amplification-well-switch">
   <table>
     <tbody>
-      <tr>
-        <th (mousedown)="dragStart($event, 'corner', 0)" [ngStyle]="{width: ROW_HEADER_WIDTH + 'px'}" class="col-header"></th>
-        <th (mousedown)="dragStart($event, 'column', col.index)" (mouseup)="dragStop($event, 'column', col.index)" (mousemove)="dragged($event, 'column', col.index)" *ngFor="let col of cols" [ngStyle]="{width: getCellWidth() + 'px'}" class="col-header" [ngClass]="{dragged: col.selected}">
-          {{col.index + 1}}
-        </th>
-      </tr>
+      <!--<tr>-->
+      <!--  <th (mousedown)="dragStart($event, 'corner', 0)" [ngStyle]="{width: ROW_HEADER_WIDTH + 'px'}" class="col-header"></th>-->
+      <!--  <th (mousedown)="dragStart($event, 'column', col.index)" (mouseup)="dragStop($event, 'column', col.index)" (mousemove)="dragged($event, 'column', col.index)" *ngFor="let col of cols" [ngStyle]="{width: getCellWidth() + 'px'}" class="col-header" [ngClass]="{dragged: col.selected}">-->
+      <!--    {{col.index + 1}}-->
+      <!--  </th>-->
+      <!--</tr>-->
       <tr *ngFor="let row of rows">
-        <td class="row-header" (mousedown)="dragStart($event, 'row', row.index)" (mousemove)="dragged($event, 'row', row.index)" (mouseup)="dragStop($event, 'row', row.index)" [ngClass]="{dragged: row.selected}">
-          <div [ngStyle]="{width: ROW_HEADER_WIDTH + 'px'}">
-            {{ row.index + 1 }}
-          </div>
-        </td>
+        <!--<td class="row-header" (mousedown)="dragStart($event, 'row', row.index)" (mousemove)="dragged($event, 'row', row.index)" (mouseup)="dragStop($event, 'row', row.index)" [ngClass]="{dragged: row.selected}">-->
+        <!--  <div [ngStyle]="{width: ROW_HEADER_WIDTH + 'px'}">-->
+        <!--    {{ row.index + 1 }}-->
+        <!--  </div>-->
+        <!--</td>-->
         <td *ngFor="let col of cols" class="well-switch" (mousedown)="dragStart($event, 'well', getWellIndex(row, col))" (mousemove)="dragged($event, 'well', getWellIndex(row, col))" (mouseup)="dragStop($event, 'well', getWellIndex(row, col))" (ngClass)="{selected: well.selected, active: well.active}" [ngStyle]="getWellStyle(row, col, getWell(row, col), getWellIndex(row, col))">
 
           <div class="well-switch-container" [ngStyle]="getWellContainerStyle(row, col, getWell(row, col), getWellIndex(row, col))">
@@ -20,6 +20,7 @@
               <div class="well-switch-bar" [ngStyle]="getStyleForWellBar(row, col, getWell(row, col), getWellIndex(row, col))">
               </div>
             </div>
+
             <div class="ct-cq-container" *ngIf="getWell(row, col)">
               <div> Cq <strong class="value">{{ getWell(row, col).cts[0] }}</strong> </div>
               <div> Cq <strong class="value">{{ getWell(row, col).cts[1] }}</strong> </div>
