--- a/ng2/src/app/shared/components/well-buttons/well-buttons.component.scss
+++ b/ng2/src/app/shared/components/well-buttons/well-buttons.component.scss
@@ -1,37 +1,23 @@
-.amplification-well-switch {
+.chart-well-switch {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 
   table {
-    border-top: 2px solid #c5c5c5;
-    border-right: 1px solid #c5c5c5;
+    border: none;
   }
 
   th, td {
-    border-left: 1px solid #c5c5c5;
-    border-bottom: 1px solid #c5c5c5;
-    border-top: 1px solid #c5c5c5;
+    border: none;
   }
 
-  .col-header {
-    font-family: 'dinot-regular';
-    font-size: 12px;
-    text-align: center;
+  .well-switch-container {
+    border: 2px solid red;
+    border-radius: 100%;
+  }
 
-    &.dragged {
-      background: #7DC2E6;
-    }
-  }
-  .row-header {
-    text-align: center;
-    &.dragged {
-      background: #7DC2E6;
-    }
-  }
   .well-switch {
-    min-height: 60px;
     vertical-align: top;
 
     &.selected {
@@ -44,14 +30,6 @@
       position: relative;
 
       .well-switch-container {
-        margin: -4px;
-        height: 68px;
-        border: 2px solid #000;
-        z-index: 999999;
-        position: absolute;
-        top: 0;
-        left: 0;
-        box-shadow: 0px 0px 5px #000;
       }
       .ct-cq-container {
         height: 49px;
@@ -60,16 +38,8 @@
 
     }
 
-    .well-switch-bar-container {
-      background-color: #fff;
-      padding: 5px 10px;
-    }
-
-    .well-switch-bar {
-      height: 5px;
-    }
-    .ct-cq-container {
-      border-top: 1px solid #c5c5c5;
+   .ct-cq-container {
+      //border-top: 1px solid #c5c5c5;
       padding: 2px 20px;
       min-height: 45px;
     }
