--- a/frontend/stylesheets/samples-targets.scss
+++ b/frontend/stylesheets/samples-targets.scss
@@ -11,6 +11,12 @@
 	padding: 5px;
 	border: 1px solid;
 	font-family: 'dinot';
+	float: right;
+	margin-top: 10px;
+}
+
+.cursor-channel{
+	cursor: pointer;
 }
 
 .samples, .targets{
