--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -191,6 +191,64 @@
     .curve-name {
       //width: 55%;
     }
+
+    .form-horizontal .editable
+    { 
+      padding-top: 5px;
+      display:inline-block;
+    }
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+      position: relative;
+      display: inline-block;
+      /* Dropdown Button */
+      .dropbtn {
+        background-color: white;
+        color: black;
+        padding: 6px;
+        font-size: 16px;
+        font-family: 'dinot-regular';
+        //font-weight: 300;
+        border: none;
+        cursor: pointer;
+        width: 120px;
+        border: 1px solid black;
+        .arrow-down{
+          float: right;
+          width: 15px;
+          padding-top: 5px;
+        }
+      }
+      /* Dropdown Content (Hidden by Default) */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 120px;
+        font-family: 'dinot-regular';
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-family: 'dinot-regular';
+      }
+
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+        display:block;
+      }
+    }
+
     .ampli-toggles {
       //width: 45%;
       padding-bottom: 5px;
@@ -207,6 +265,13 @@
   .content.row {
     margin-left: 0;
     margin-right: 0;
+    .plot-options {
+      text-align: right;
+      .plot-option {
+        display: inline-block;
+        text-align: left;
+      }
+    }
   }
   .chart-section {
     // display: inline-block;
