--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -23,14 +23,14 @@ limitations under the License.
         <div>
           <div class="curve-header">
             <div class="row">
-              <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 curve-name">
+              <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5 curve-name">
                 <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
                 <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart">
                   Amplification Curve
                   <img class="arrow-down" src="/images/arrow-down.png">
                 </chart-chooser>
               </div>
-              <div class="col-lg-7 col-md-6 col-sm-6 col-xs-6 ampli-toggles">
+              <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles">
                 <div class="row">
                   <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 plot-type-buttons-col" ng-show="is_dual_channel">
                     <div class="plot-type-buttons">
@@ -51,6 +51,23 @@ limitations under the License.
                     </div>
                   </div> -->
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
+                    <div class="subheader-switches SH">
+                      <div class="item-switch">
+                        <label>Baseline Sub.</label>
+                        <switch class="switch" ng-model="baseline_subtraction"></switch>
+                      </div>
+                      <div class="item-switch-channel" ng-show="!is_dual_channel">
+                        <label class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
+                      </div>
+                      <div class="item-switch-channel" ng-show="is_dual_channel">
+                        <label ng-show="experiment.type != 'test_kit'" class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
+                        <label>CHOOSE CHANNEL:</label> &nbsp;
+                        <switch ng-model="channel_1"></switch>
+                        <label>1</label>
+                        <switch ng-model="channel_2"></switch>
+                        <label style="padding-right:0px;">2</label>
+                      </div>
+                    </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
                     <div class="plot-option">
@@ -99,55 +116,44 @@ limitations under the License.
               </div>
             </div>
           </div>
-          <div class="subheader-switches SH">
-            <div class="item-switch">
-              <switch ng-model="baseline_subtraction"></switch>
-              <label>BASELINE SUBTRACTION</label>
-            </div>
-            <div class="item-switch-channel" ng-show="is_dual_channel">
-              <label ng-show="experiment.type != 'test_kit'" class="amplification-options" ng-click="openOptionsModal()">AMPLIFICATION SETTINGS</label>
-              <label>CHOOSE CHANNEL:</label> &nbsp;
-              <switch ng-model="channel_1"></switch>
-              <label>1</label>
-              <switch ng-model="channel_2"></switch>
-              <label style="padding-right:0px;">2</label>
-            </div>
-            <div class="item-switch-channel" ng-show="!is_dual_channel">
-              <label class="amplification-options" ng-click="openOptionsModal()">AMPLIFICATION SETTINGS</label>
-            </div>
-          </div>
-          <div style="padding-left:20px; padding-right: 20px;">
-            <div class="chart-container" full-height offset="397" min="389">
-              <div class="chart-error B1" ng-show="retrying && !fetching && error">
-                <strong class="text-black">Unable to load chart data</strong>
-                <p ng-bind="error"></p>
-                Retrying in {{retry}} seconds
-                <ellipsis-animated></ellipsis-animated>
-              </div>
-              <div class="loading-blue-container" ng-show="(fetching || retrying) && !error && !hasData">
-                <div class="loading-blue"></div>
-                <h2 class="H2">Loading Data <ellipsis-animated></ellipsis-animated></h2>
-                <p class="B2">May take a minute</p>
-              </div>
-              <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
-            </div>
-          </div>
-          <!-- <div class="text-center num-cycle-text SH">CYCLE NUMBER</div> -->
-          <div class="ampli-zoom-scroll-container">
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                <div class="zoom-container">
-                  <div class="zoom-text SH">
-                    <b>ZOOM</b>
-                  </div>
-                  <ampli-slider ng-model="$parent.ampli_zoom" ng-if="chart === 'amplification'"></ampli-slider>
+
+          <div class="curve-body">
+            <div class="curve-plot">
+              <div class="chart-container" full-height offset="397" min="389">
+                <div class="chart-error B1" ng-show="retrying && !fetching && error">
+                  <strong class="text-black">Unable to load chart data</strong>
+                  <p ng-bind="error"></p>
+                  Retrying in {{retry}} seconds
+                  <ellipsis-animated></ellipsis-animated>
                 </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ampli-scrollbar-container">
-                <scrollbar ng-model="$parent.ampli_scroll" ng-if="chart === 'amplification'"></scrollbar>
+                <div class="loading-blue-container" ng-show="(fetching || retrying) && !error && !hasData">
+                  <div class="loading-blue"></div>
+                  <h2 class="H2">Loading Data <ellipsis-animated></ellipsis-animated></h2>
+                  <p class="B2">May take a minute</p>
+                </div>
+                <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
+                <table>
+                  <tr>
+                    <td><button class="button zoom-button" ng-click="zoomIn()">+</button></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td><button class="button zoom-button" ng-click="zoomOut()">-</button></td>
+                  </tr>
+                </table>
               </div>
             </div>
+            <div class="targets-set" ng-show="targetsSet.length">
+              <table>
+                <tr ng-repeat="target in targetsSet">
+                  <td>{{target}}</td>
+                  <td></td>
+                </tr>
+              </table>
+            </div>
           </div>
+
         </div>
         <div class="choose-chart">
           <amplification-well-switch ng-model="wellButtons" color-by="color_by" chart-type="amplification"></amplification-well-switch>
