--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -129,6 +129,9 @@ limitations under the License.
             <div class="targets-set" ng-show="targetsSet.length">
               <table class="targets-table">
                 <tr ng-repeat="target in targetsSet">
+                  <td>
+                    <span ng-if="color_by==='target'" class="dot" ng-attr-style="background-color: {{COLORS[$index]}}"></span>
+                  </td>
                   <td>{{target}}</td>
                   <td class="td-tik" ng-click="targetClick($index)"><span ng-show="!targetsSetHided[$index]"><img src="/images/tik.png"></span></td>
                 </tr>
