--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -31,6 +31,8 @@
       <div class="chart-screens-container">
         <div ng-show="chart === 'amplification'" ng-include src="'app/views/experiment/amplification-chart.html'">
         </div>
+        <div ng-show="chart === 'standard-curve'" ng-include src="'app/views/experiment/standard-curve.html'">
+        </div>
         <div ng-show="chart === 'temperature-logs'" ng-include src="'app/views/experiment/temperature-logs.html'">
         </div>
         <div ng-show="chart === 'melt-curve'" ng-include src="'app/views/experiment/melt-curve.html'">
