fixed chart issue due to expanded table view

--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -113,7 +113,7 @@ limitations under the License.
                   <h2 class="H2">Loading Data <ellipsis-animated></ellipsis-animated></h2>
                   <p class="B2">May take a minute</p>
                 </div>
-                <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
+                <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" scroll="ampli_scroll.value" show="showStandardChart"></amplification-chart>
                 <table>
                   <tr>
                     <td><button class="button zoom-button" ng-click="zoomIn()">+</button></td>
