--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -308,11 +308,11 @@
       }
       .targets-set {
         background-color: #fff;
-        margin-left: 20px;
+        //margin-left: 20px;
         margin-bottom: -66px;
         padding: 10px;
         display: inline-block;
-        width: 12%;
+        width: 100%;
         .targets-table {
           width: 100%;
           .td-tik {
